--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "concurrently": "3.5.1",
     "react-scripts": "^1.1.4"
   },
+  "comments": {
+    "concurrently": "to run more than one comand in scripts and to know which one is this one",
+    "react-scripts": "contain a webpack and many more ",
+    "autoprefixer": "Autoprefixer is a CSS post processor. It combs through compiled CSS files to add or remove vendor prefixes like -webkit and -moz"
+  },
   "dependencies": {
     "autoprefixer-stylus": "0.14.0",
     "firebase": "^4.10.1",
@@ -19,8 +24,9 @@
     "stylus": "0.54.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
+    "dev": "react-scripts start",
+    "start": "serve --single ./build",
+    "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run dev\" \"npm run styles:watch\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
